...
                  controller: _phoneController,
                  readOnly: true,
                ),
                SizedBox(height: 24),
                // 비밀번호 입력란 (CustomTextField -> CustomAuthTextField 변경)
                CustomAuthTextField(
                  key: const Key('signupStep2_passwordField'),
                  label: '비밀번호',
                  hintText: '비밀번호를 입력하세요',
                  controller: _passwordController,
                  obscureText: !isPasswordVisible,
                  onChanged: (value) {
                    setState(() {
...
                      ),
                    ),
                    SizedBox(width: 16),
                    Expanded(
                      flex: 2,
                      child: CustomButton(
                        key: const Key('signupStep2_nextButton'), // ★ 추가
                        text: '다음으로',
                        onPressed: () async {
                          await signupViewModel.validatePassword();
                          // 버튼 눌렀을 때 유효하지 않은 비밀번호면 화면 전환 방지
                          if (signupViewModel.passwordError != null) return;
                          _onSignupComplete();
...
