...
                          viewModel.loginError!,
                          style: TextStyle(color: Colors.red, fontSize: 12),
                        ),
                      ),
                    SizedBox(height: 24),
                    CustomAuthTextField(
                      key: const Key('login_passwordField'),
                      label: '비밀번호',
                      controller: viewModel.passwordController, // 로그인 뷰모델 내 비밀번호 컨트롤러 사용
                      obscureText: !viewModel.isPasswordVisible,
                      onChanged: (value) {
                        viewModel.setPassword(value);
                      },
...
                    ),
                  ),
                  SizedBox(width: 16),
                  Expanded(
                    flex: 2,
                    child: ElevatedButton(
                      key: const Key('login_nextButton'),
                      onPressed: () async {
                        bool success = await viewModel.login();
                        if (success) {
                          // 로그인 성공 시 홈 화면으로 이동
                          Navigator.pushReplacementNamed(context, '/home');
                        } else {
...
