...
                            fontWeight: FontWeight.w400,
                            letterSpacing: 0.15,
                          ),
                        ),
                        SizedBox(height: 64),
                        CustomAuthTextField(
                          key: const Key('onboarding2_nicknameTextField'),
                          label: '닉네임',
                          hintText: '8자 이내의 닉네임을 입력해주세요',
                          controller: viewModel.nicknameController,
                          onChanged: (value) {
                            viewModel.nickname = value;
                            if (viewModel.nicknameError != null) {
...
                          ),
                        ),
                        SizedBox(width: 16),
                        Expanded(
                          flex: 2,
                          child: ElevatedButton(
                            key: const Key('onboarding2_nextButton'),
                            onPressed: () =>
                                viewModel.validateNickname(context),
                            style: ElevatedButton.styleFrom(
                              backgroundColor: Color(0xFF78B545),
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(1000),
...
